--- a/home.html
+++ b/home.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Pi Restaurant</title>
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -27,7 +25,7 @@
                         <center>Make Your Reservation Below</center>
                     </h2>
                     <br>
-                    <p>
+                    <p class="text-center">
                         <button type="button" class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
                         </button>
