--- a/table.html
+++ b/table.html
@@ -1,18 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-   
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <title>Pi Restaurant</title>
+
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
-    <title>Document</title>
+        crossorigin="anonymous">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+    <!-- Jumbotron -->
+    <div class="containter">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h1>
+                        <center>
+                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Pi Restaurant</center>
+                    </h1>
+                    <hr>
+                    <h2>
+                        <center>Make Your Reservation Below</center>
+                    </h2>
+                    <br>
+                    <p class="text-center">
+                        <button type="button" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
+                        </button>
+                        <button type="button" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                        </button>
+                    </p>
+                </div>
+                <!-- Table Reservation Form -->
+                <div class="panel panel-default" id="bottom-panel">
+                    <div class="panel-heading">
+                        Current Reservations
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="container" id="currentReservations">
+                            <div class="col-md-12">           
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-heading">
+                            Waiting List
+                        </div>
+                        <div class="panel panel-info">
+                            <div class="container" id="currentReservations">
+                                <div class="col-md-12">           
+                                </div>
+                            </div>
+                        </div>
+                </div>
 
-</body>
+                
 
-</html>
+            </form>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
