--- a/table.html
+++ b/table.html
@@ -47,11 +47,12 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="panel-heading">
                             Waiting List
                         </div>
                         <div class="panel panel-info">
-                            <div class="container" id="currentReservations">
+                            <div class="container" id="waiting">
                                 <div class="col-md-12">           
                                 </div>
                             </div>
