--- a/home.html
+++ b/home.html
@@ -27,10 +27,10 @@
                     </h2>
                     <br>
                     <p class="text-center">
-                        <button type="button" class="btn btn-default btn-lg">
+                        <button type="button" href="table.html"class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
                         </button>
-                        <button type="button" class="btn btn-default btn-lg">
+                        <button type="button" href="home.html" class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                         </button>
                     </p>
