--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -28,15 +28,15 @@
                     </h2>
                     <br>
                     <p class="text-center">
-                        <button type="button" class="btn btn-default btn-lg">
+                        <button type="button" href="table.html" class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
                         </button>
-                        <button type="button" class="btn btn-default btn-lg">
+                        <button type="button" href="home.html"class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                         </button>
                     </p>
                 </div>
-                <!-- Table Reservation Form -->
+                <!-- current reservations -->
                 <div class="panel panel-default" id="bottom-panel">
                     <div class="panel-heading">
                         Current Reservations
