--- a/table.html
+++ b/table.html
@@ -28,12 +28,16 @@
                     </h2>
                     <br>
                     <p class="text-center">
-                        <button type="button" href="table.html" class="btn btn-default btn-lg">
-                            <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
-                        </button>
-                        <button type="button" href="home.html"class="btn btn-default btn-lg">
-                            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                        </button>
+                        <a href="table.html">
+                            <button type="button" class="btn btn-default btn-lg">
+                                <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
+                            </button>
+                        </a>
+                        <a href="home.html">
+                            <button type="button" href="home.html" class="btn btn-default btn-lg">
+                                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                            </button>
+                        </a>
                     </p>
                 </div>
                 <!-- current reservations -->
@@ -43,27 +47,27 @@
                     </div>
                     <div class="panel panel-info">
                         <div class="container" id="currentReservations">
-                            <div class="col-md-12">           
+                            <div class="col-md-12">
                             </div>
                         </div>
                     </div>
 
                     <div class="panel-heading">
-                            Waiting List
-                        </div>
-                        <div class="panel panel-info">
-                            <div class="container" id="waiting">
-                                <div class="col-md-12">           
-                                </div>
+                        Waiting List
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="container" id="waiting">
+                            <div class="col-md-12">
                             </div>
                         </div>
+                    </div>
                 </div>
 
-                
 
-            </form>
+
+                </form>
+            </div>
         </div>
-    </div>
     </div>
     </div>
     </div>
