--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
                 </div>
                 <!-- Table Reservation Form -->
                 <div class="panel panel-default margin" id="bottom-panel">
-                    <div class="panel-heading">
+                    <div class="panel-heading border">
                         Table Reservation
                     </div>
                     <div class="panel-body">
@@ -59,11 +59,24 @@
                                 <input type="text" class="form-control" id="resID">
                             </div>
                             <br>
-                            <button type="submit" class- "btn btn-default" id="submit">Submit</button>
+                            <button type="submit" class= "btn btn-default" id="submit">Submit</button>
                     </div>
                     </form>
                 </div>
             </div>
         </div>
+        <!-- Footer -->
+        <footer class="page-footer font-small blue pt-4 mt-4">
+                
+                    <!--Footer Links-->
+                    <div class="container-fluid text-center text-md-left">
+                        <div class="footer-btns text-center">
+                                <a href="#" id="clear">Clear Table</a> | <a href="#">API Table Link</a> | <a href="#">API Wait List</a>
+                        </div>
+                        <div class="footer-copyright py-3 text-center">
+                            © 2018 Copyright: Pi Restaurant
+                        </div>
+                    </div>
+                </footer>
     </div>
     </div>
