--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@
     <div class="containter">
         <div class="row">
             <div class="col-md-12">
-                <div class="jumbotron">
+                <div class="jumbotron jumbostyle margin">
                     <h1>
                         <center>
                             <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Pi Restaurant</center>
@@ -41,8 +41,8 @@
                     </p>
                 </div>
                 <!-- current reservations -->
-                <div class="panel panel-default" id="bottom-panel">
-                    <div class="panel-heading">
+                <div class="panel panel-default margin" id="bottom-panel">
+                    <div class="panel-heading border">
                         Current Reservations
                     </div>
                     <div class="panel panel-info">
@@ -68,6 +68,19 @@
                 </form>
             </div>
         </div>
+         <!-- Footer -->
+         <footer class="page-footer font-small blue pt-4 mt-4">
+                
+                    <!--Footer Links-->
+                    <div class="container-fluid text-center text-md-left">
+                        <div class="footer-btns text-center">
+                                <a href="#" id="clear">Clear Table</a> | <a href="#">API Table Link</a> | <a href="#">API Wait List</a>
+                        </div>
+                        <div class="footer-copyright py-3 text-center">
+                            © 2018 Copyright: Pi Restaurant
+                        </div>
+                    </div>
+                </footer>
     </div>
     </div>
     </div>
