--- a/home.html
+++ b/home.html
@@ -32,9 +32,10 @@
                                 <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
                             </button>
                         </a>
-                        <a href="home.html">
-                            <button type="button" href="home.html" class="btn btn-default btn-lg">
+                        <a href="actualhome.html">
+                            <button type="button" href="actualhome.html" class="btn btn-default btn-lg">
                                 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                                Home
                             </button>
                         </a>
                     </p>
@@ -74,9 +75,6 @@
                 
                     <!--Footer Links-->
                     <div class="container-fluid text-center text-md-left">
-                        <div class="footer-btns text-center">
-                                <a href="#" id="clear">Clear Table</a> | <a href="#">API Table Link</a> | <a href="#">API Wait List</a>
-                        </div>
                         <div class="footer-copyright py-3 text-center">
                             © 2018 Copyright: Pi Restaurant
                         </div>
