--- a/table.html
+++ b/table.html
@@ -28,16 +28,18 @@
                     </h2>
                     <br>
                     <p class="text-center">
-                        <a href="table.html">
+                        <a href="actualhome.html">
                             <button type="button" class="btn btn-default btn-lg">
-                                <span class="glyphicon glyphicon-list-alt " aria-hidden="true"></span> View Tables
+                                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                                Home
                             </button>
                         </a>
                         <a href="home.html">
-                            <button type="button" href="home.html" class="btn btn-default btn-lg">
-                                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                            </button>
-                        </a>
+                                <button type="button" href="home.html" class="btn btn-default btn-lg">
+                                    <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>
+                                     Make Reservations
+                                </button>
+                            </a>
                     </p>
                 </div>
                 <!-- current reservations -->
